# fast_zero

./: .coverage  database.db  pyproject.toml
Ccontrol/: app.py  database.py  schemas.py  security.py
Ccontrol/routers/: auth.py  todos.py  users.py
fast_zero/: app.py  security.py
fast_zero/routers/: auth.py  users.py
migrations/: env.py
migrations/versions/: e40edd3ea77f_create_users_table.py  ee13c981fb6a_create_todos_table.py
tests/: conftest.py  test_app.py  test_db.py  test_security.py  test_todos.py  test_users.py
